# ki

./: $tmp  .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  issue14657_2-erc.json  sub-erc.json  tmp-oracle.json
05/2abf5cf869/: metadata.json
15/7a3e1f0f8e/: metadata.json
16/0dc3455529/: metadata.json
16/6d90d4fe88/: metadata.json
24/edf4b41904/: metadata.json
28/0bd82d44b1/: metadata.json
2a/bd441a0bc7/: metadata.json
2c/8f643dbf04/: metadata.json
30/b04c353082/: metadata.json
4b/97c1ea3aae/: metadata.json
54/1119c8079f/: metadata.json
5a/58eb56b457/: metadata.json
5c/55b20a544c/: metadata.json
6a/51b76447bc/: metadata.json
6d/c94f900823/: metadata.json
70/ad184fbb7f/: metadata.json
7d/fa91f27d1d/: metadata.json
82/6a54bd77c2/: metadata.json
8e/7403eddabf/: metadata.json
8f/e4e004d1eb/: metadata.json
97/803afc46a2/: metadata.json
9a/59f5b72cfa/: metadata.json
9e/64648c96c6/: metadata.json
b1/53e87d0f00/: metadata.json
ba/181bc421ba/: metadata.json
c3/1ad42362bf/: metadata.json
c5/b3e39b877c/: metadata.json
ca/6ce39da59d/: metadata.json
cf/bc6917b3c3/: metadata.json
d0/2128917d9a/: metadata.json
d1/7d2b3e4832/: metadata.json
d4/fa052758c4/: metadata.json
da/17eda1e1b0/: metadata.json
de/399769034b/: metadata.json
e3/db07af1e1a/: metadata.json
e4/59d6a76868/: metadata.json
ef/d2b443784d/: metadata.json
src/: cli.rs  error.rs  main.rs  output.rs
tests/: cli_editing.rs  cli_extract.rs  cli_extract_diagnostics.rs  cli_extract_mutation.rs  cli_project.rs  cli_schematic_erc.rs  cli_smoke.rs
(+1072 files in other folders)
